--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,11 @@
   url('../fonts/Vaadin-Icons.svg#icomoon') format('svg');
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   background: #fafafa;
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
